...
    private let sections: [MainTableSection] = [.description, .projects, .experience]
    fileprivate let kCellIdentifier = "mainCellIdentifier"
    
    // MARK: - UIViewController Main Functions
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Profile"
        viewModel.delegate = self
        tableView.delegate = self
        tableView.dataSource = self
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: kCellIdentifier)
        
        let footer = MainFooterView(frame: CGRect(x: 0, y: 0, width: tableView.frame.width, height: 60))
...
            cell.textLabel?.text = viewModel.resumeResponse?.description
            cell.textLabel?.numberOfLines = 0
        case .projects:
            cell.textLabel?.text = "Projects"
            cell.accessoryType = .disclosureIndicator
        case .experience:
            cell.textLabel?.text = "Experience"
            cell.accessoryType = .disclosureIndicator
        }
        return cell
    }
    
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
...
